// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account reducer should handle the DID_SET action  1`] = `
Object {
  "claims": Immutable.Map {
    "loading": false,
    "selected": Immutable.Map {
      "displayName": "",
      "type": Immutable.List [
        "",
        "",
      ],
      "claims": Immutable.List [],
    },
    "decoratedCredentials": Immutable.Map {
      "Personal": Immutable.List [
        Immutable.Map {
          "displayName": "Name",
          "type": Immutable.List [
            "Credential",
            "ProofOfNameCredential",
          ],
          "claims": Immutable.List [
            Immutable.Map {
              "id": "",
              "name": "name",
              "value": "",
            },
          ],
        },
      ],
      "Contact": Immutable.List [
        Immutable.Map {
          "displayName": "E-mail",
          "type": Immutable.List [
            "Credential",
            "ProofOfEmailCredential",
          ],
          "claims": Immutable.List [
            Immutable.Map {
              "id": "",
              "name": "email",
              "value": "",
            },
          ],
        },
        Immutable.Map {
          "displayName": "Phone",
          "type": Immutable.List [
            "Credential",
            "ProofOfMobilePhoneNumberCredential",
          ],
          "claims": Immutable.List [
            Immutable.Map {
              "id": "",
              "name": "phone",
              "value": "",
            },
          ],
        },
      ],
    },
  },
  "did": Immutable.Map {
    "did": "mock did",
  },
  "loading": Immutable.Map {
    "loading": true,
  },
}
`;

exports[`account reducer should initialize correctly 1`] = `
Object {
  "claims": Immutable.Map {
    "loading": false,
    "selected": Immutable.Map {
      "displayName": "",
      "type": Immutable.List [
        "",
        "",
      ],
      "claims": Immutable.List [],
    },
    "decoratedCredentials": Immutable.Map {
      "Personal": Immutable.List [
        Immutable.Map {
          "displayName": "Name",
          "type": Immutable.List [
            "Credential",
            "ProofOfNameCredential",
          ],
          "claims": Immutable.List [
            Immutable.Map {
              "id": "",
              "name": "name",
              "value": "",
            },
          ],
        },
      ],
      "Contact": Immutable.List [
        Immutable.Map {
          "displayName": "E-mail",
          "type": Immutable.List [
            "Credential",
            "ProofOfEmailCredential",
          ],
          "claims": Immutable.List [
            Immutable.Map {
              "id": "",
              "name": "email",
              "value": "",
            },
          ],
        },
        Immutable.Map {
          "displayName": "Phone",
          "type": Immutable.List [
            "Credential",
            "ProofOfMobilePhoneNumberCredential",
          ],
          "claims": Immutable.List [
            Immutable.Map {
              "id": "",
              "name": "phone",
              "value": "",
            },
          ],
        },
      ],
    },
  },
  "did": Immutable.Map {
    "did": "",
  },
  "loading": Immutable.Map {
    "loading": true,
  },
}
`;
